css/agency.css
/*!
 * Start Bootstrap - Agency Bootstrap Theme (http://startbootstrap.com)
 * Code licensed under the Apache License v2.0.
 * For details, see http://www.apache.org/licenses/LICENSE-2.0.
 */

html,
body {
    margin: 0;
    padding: 0;
    width: 100%;
    min-height: 100%;
}

body {
    overflow-x: hidden;
    font-family: "Roboto Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
    background-color: #222;
    color: #fff;
    padding-top: 70px;
}

body.light-mode {
    background-color: #fff;
    color: #000;
}

.text-muted {
    color: #777;
}

body.dark-mode .text-muted {
    color: #aaa;
}

.text-primary {
    color: #FF6600;
}

p {
    font-size: 14px;
    line-height: 1.75;
}

p.large {
    font-size: 16px;
}

a,
a:hover,
a:focus,
a:active,
a.active {
    outline: 0;
}

a {
    color: #FF6600;
}

a:hover,
a:focus,
a:active,
a.active {
    color: #FF6600;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    text-transform: uppercase;
    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
    font-weight: 700;
}

.img-centered {
    margin: 0 auto;
}

.bg-light-gray {
    background-color: #f7f7f7;
}

body.dark-mode .bg-light-gray {
    background-color: #2a2a2a;
}

.bg-darkest-gray {
    background-color: #222;
}

.btn-primary {
    border-color: #FF6600;
    text-transform: uppercase;
    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
    font-weight: 700;
    color: #fff;
    background-color: #FF6600;
}

.btn-primary:hover,
.btn-primary:focus,
.btn-primary:active,
.btn-primary.active,
.open .dropdown-toggle.btn-primary {
    border-color: #f6bf01;
    color: #fff;
    background-color: #FF6600;
}

.btn-primary:active,
.btn-primary.active,
.open .dropdown-toggle.btn-primary {
    background-image: none;
}

.btn-primary.disabled,
.btn-primary[disabled],
fieldset[disabled] .btn-primary,
.btn-primary.disabled:hover,
.btn-primary[disabled]:hover,
fieldset[disabled] .btn-primary:hover,
.btn-primary.disabled:focus,
.btn-primary[disabled]:focus,
fieldset[disabled] .btn-primary:focus,
.btn-primary.disabled:active,
.btn-primary[disabled]:active,
fieldset[disabled] .btn-primary:active,
.btn-primary.disabled.active,
.btn-primary[disabled].active,
fieldset[disabled] .btn-primary.active {
    border-color: #FF6600;
    background-color: #FF6600;
}

.btn-primary .badge {
    color: #FF6600;
    background-color: #fff;
}

.btn-xl {
    padding: 20px 40px;
    border-color: #FF6600;
    border-radius: 3px;
    text-transform: uppercase;
    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
    font-size: 18px;
    font-weight: 700;
    color: #fff;
    background-color: #FF6600;
}

.btn-xl:hover,
.btn-xl:focus,
.btn-xl:active,
.btn-xl.active,
.open .dropdown-toggle.btn-xl {
    border-color: #f6bf01;
    color: #fff;
    background-color: #FF6600;
}

.btn-xl:active,
.btn-xl.active,
.open .dropdown-toggle.btn-xl {
    background-image: none;
}

.btn-xl.disabled,
.btn-xl[disabled],
fieldset[disabled] .btn-xl,
.btn-xl.disabled:hover,
.btn-xl[disabled]:hover,
fieldset[disabled] .btn-xl:hover,
.btn-xl.disabled:focus,
.btn-xl[disabled]:focus,
fieldset[disabled] .btn-xl:focus,
.btn-xl.disabled:active,
.btn-xl[disabled]:active,
fieldset[disabled] .btn-xl:active,
.btn-xl.disabled.active,
.btn-xl[disabled].active,
fieldset[disabled] .btn-xl.active {
    border-color: #FF6600;
    background-color: #FF6600;
}

.btn-xl .badge {
    color: #FF6600;
    background-color: #fff;
}

.navbar-default {
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 1030;
    border-color: transparent;
    background-color: #222;
}

.navbar-default .navbar-brand {
    position: relative;
    font-family: Montserrat;
    color: #FF6600;
    padding: 0;
}

.navbar-default .navbar-brand:hover,
.navbar-default .navbar-brand:focus,
.navbar-default .navbar-brand:active,
.navbar-default .navbar-brand.active {
    color: #FF6600;
}

.navbar-default .navbar-brand img {
    max-height: 45px;
    width: auto;
    display: block;
}

.navbar-default .navbar-toggle {
    border-color: #FF6600;
}

.navbar-default .navbar-toggle .icon-bar {
    background-color: #fff;
}

.navbar-default .navbar-toggle:hover,
.navbar-default .navbar-toggle:focus {
    background-color: #FF6600;
}

.navbar-default .nav li a {
    text-transform: uppercase;
    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
    font-weight: 400;
    letter-spacing: 1px;
    color: #fff;
}

.navbar-default .nav li a:hover,
.navbar-default .nav li a:focus {
    outline: 0;
    color: #FF6600;
}

.navbar-default .navbar-nav>.active>a {
    border-radius: 0;
    color: #fff;
    background-color: #FF6600;
}

.navbar-default .navbar-nav>.active>a:hover,
.navbar-default .navbar-nav>.active>a:focus {
    color: #fff;
    background-color: #FF6600;
}

#theme-toggle {
    background-color: transparent !important;
    border: none !important;
    color: #fff !important;
    font-size: 20px !important;
    padding: 10px 15px !important;
    cursor: pointer;
    text-decoration: none !important;
    vertical-align: middle !important;
    font-weight: 400;
    position: relative;
    top: -9px;
}

#theme-toggle:hover {
    color: #FF6600 !important;
}

body.light-mode .navbar-default {
    background-color: #fff;
    border-bottom: 1px solid #ddd;
}

body.light-mode .navbar-default .nav li a {
    color: #000 !important;
}

body.light-mode .navbar-default .nav li a:hover,
body.light-mode .navbar-default .nav li a:focus {
    color: #FF6600 !important;
}

body.light-mode .navbar-default .navbar-brand {
    color: #000 !important;
}

body.light-mode #theme-toggle {
    color: #000 !important;
    text-decoration: none !important;
    display: flex !important;
    align-items: center !important;
}

body.light-mode #theme-toggle:hover {
    color: #FF6600 !important;
}

body.light-mode .navbar-default .navbar-toggle .icon-bar {
    background-color: #000 !important;
}
/* ... */

